# four-win-three-lose

./: .sync-exclude.lst  Cargo.toml  README.md
benches/: brute_force.rs
src/: brute_force_field.rs  field.rs  lib.rs
src/gamelogic/: game_handler.rs  mod.rs
src/gui/: gui_board.rs  mod.rs
src/player/: computer.rs  human_terminal.rs  mod.rs
src/visualizer/: mod.rs  terminal.rs
